--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,15 +23,18 @@ jobs:
           kurtosis version
 
       # Step 4: Spin up Kurtosis Devnet
-      - name: Deploy Kurtosis Devnet
-        run: |
-          kurtosis run --enclave cdk github.com/0xPolygon/kurtosis-cdk@v0.2.27 \
-            --args-file=https://raw.githubusercontent.com/0xPolygon/kurtosis-cdk/refs/heads/main/.github/tests/combinations/fork11-new-cdk-stack-rollup.yml
+      # - name: Deploy Kurtosis Devnet
+      #   run: |
+      #     kurtosis run --enclave cdk github.com/0xPolygon/kurtosis-cdk@v0.2.27 \
+      #       --args-file=https://raw.githubusercontent.com/0xPolygon/kurtosis-cdk/refs/heads/main/.github/tests/combinations/fork11-new-cdk-stack-rollup.yml
 
       # Step 5: Extract RPC URL from Kurtosis Service
       - name: Get Kurtosis RPC URL
         id: grab-url
         run: |
+          echo "Current working directory:"
+          pwd
+          
           # Query Kurtosis for service details
           SERVICE_INFO=$(kurtosis service inspect cdk cdk-erigon-rpc-001)
 
