--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,26 +32,48 @@ jobs:
       - name: Get Kurtosis RPC URL
         id: grab-url
         run: |
+          # echo "Current working directory:"
+          # pwd
+          # 
+          # echo "Files in the current directory:"
+          # ls -la
+          # 
+          # # # Query Kurtosis for service details
+          # # SERVICE_INFO=$(kurtosis service inspect cdk cdk-erigon-rpc-001)
+          # # 
+          # # # Extract only the HTTP RPC URL (ignore ws-rpc lines)
+          # # RPC_URL=$(echo "$SERVICE_INFO" | grep -E '^ *rpc:' | awk -F'-> ' '{print $2}' | awk '{print $1}')
+          # # 
+          # # # Debug: Print the extracted RPC_URL for troubleshooting
+          # # echo "Extracted RPC_URL: $RPC_URL"
+          # 
+          # # Escape special characters in RPC_URL (e.g., `/`, `&`)
+          # ESCAPED_RPC_URL=hello.com
+          # 
+          # # Inject the RPC URL into the .env file
+          # sed -i "" "s|l2_rpc_url=http://127.0.0.1:.*|l2_rpc_url=$ESCAPED_RPC_URL|" .env
+          
           echo "Current working directory:"
           pwd
-          
+
+          # List all files in the directory
           echo "Files in the current directory:"
           ls -la
-          
-          # # Query Kurtosis for service details
-          # SERVICE_INFO=$(kurtosis service inspect cdk cdk-erigon-rpc-001)
-          # 
-          # # Extract only the HTTP RPC URL (ignore ws-rpc lines)
-          # RPC_URL=$(echo "$SERVICE_INFO" | grep -E '^ *rpc:' | awk -F'-> ' '{print $2}' | awk '{print $1}')
-          # 
-          # # Debug: Print the extracted RPC_URL for troubleshooting
-          # echo "Extracted RPC_URL: $RPC_URL"
 
-          # Escape special characters in RPC_URL (e.g., `/`, `&`)
+          # Check if .env exists
+          echo "Checking if .env exists:"
+          if [ -f .env ]; then
+              echo ".env exists and is readable"
+          else
+              echo "ERROR: .env file not found in $(pwd)"
+              exit 1
+          fi
+          
           ESCAPED_RPC_URL=hello.com
 
           # Inject the RPC URL into the .env file
-          sed -i "" "s|l2_rpc_url=http://127.0.0.1:.*|l2_rpc_url=$ESCAPED_RPC_URL|" .env
+          echo "Updating .env file..."
+          sed -i "s|l2_rpc_url=http://127.0.0.1:.*|l2_rpc_url=$ESCAPED_RPC_URL|" .env
 
       # Debug: Output the updated .env file
       - name: Output .env for Debugging
