--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,52 +28,28 @@ jobs:
       #     kurtosis run --enclave cdk github.com/0xPolygon/kurtosis-cdk@v0.2.27 \
       #       --args-file=https://raw.githubusercontent.com/0xPolygon/kurtosis-cdk/refs/heads/main/.github/tests/combinations/fork11-new-cdk-stack-rollup.yml
 
-      # Step 5: Extract RPC URL from Kurtosis Service
+      Step 5: Extract RPC URL from Kurtosis Service
       - name: Get Kurtosis RPC URL
         id: grab-url
         run: |
-          # echo "Current working directory:"
-          # pwd
+          # # Query Kurtosis for service details
+          # SERVICE_INFO=$(kurtosis service inspect cdk cdk-erigon-rpc-001)
           # 
-          # echo "Files in the current directory:"
-          # ls -la
+          # # Extract only the HTTP RPC URL (ignore ws-rpc lines)
+          # RPC_URL=$(echo "$SERVICE_INFO" | grep -E '^ *rpc:' | awk -F'-> ' '{print $2}' | awk '{print $1}')
           # 
-          # # # Query Kurtosis for service details
-          # # SERVICE_INFO=$(kurtosis service inspect cdk cdk-erigon-rpc-001)
-          # # 
-          # # # Extract only the HTTP RPC URL (ignore ws-rpc lines)
-          # # RPC_URL=$(echo "$SERVICE_INFO" | grep -E '^ *rpc:' | awk -F'-> ' '{print $2}' | awk '{print $1}')
-          # # 
-          # # # Debug: Print the extracted RPC_URL for troubleshooting
-          # # echo "Extracted RPC_URL: $RPC_URL"
+          # # Debug: Print the extracted RPC_URL for troubleshooting
+          # echo "Extracted RPC_URL: $RPC_URL"
           # 
           # # Escape special characters in RPC_URL (e.g., `/`, `&`)
-          # ESCAPED_RPC_URL=hello.com
+          # ESCAPED_RPC_URL=$(echo "$RPC_URL" | sed 's/[&/]/\\&/g')
           # 
           # # Inject the RPC URL into the .env file
-          # sed -i "" "s|l2_rpc_url=http://127.0.0.1:.*|l2_rpc_url=$ESCAPED_RPC_URL|" .env
-          
-          echo "Current working directory:"
-          pwd
+          # sed -i "s|l2_rpc_url=http://127.0.0.1:.*|l2_rpc_url=$ESCAPED_RPC_URL|" .env
+      
+          # Update BATS_LIB_PATH dynamically in the .env file
+          sed -i "s|BATS_LIB_PATH=.*|BATS_LIB_PATH=\"$(pwd)/scripts/bats-scripts/lib\"|" .env
 
-          # List all files in the directory
-          echo "Files in the current directory:"
-          ls -la
-
-          # Check if .env exists
-          echo "Checking if .env exists:"
-          if [ -f .env ]; then
-              echo ".env exists and is readable"
-          else
-              echo "ERROR: .env file not found in $(pwd)"
-              exit 1
-          fi
-          
-          ESCAPED_RPC_URL=hello.com
-
-          # Inject the RPC URL into the .env file
-          echo "Updating .env file..."
-          sed -i "s|l2_rpc_url=http://127.0.0.1:.*|l2_rpc_url=$ESCAPED_RPC_URL|" .env
 
       # Debug: Output the updated .env file
       - name: Output .env for Debugging
@@ -92,3 +68,5 @@ jobs:
       # Step 7: Run Makefile commands for tests
       - name: Run Tests
         run: make test-bats
+        run: |
+          make test-bats
