--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,4 +78,6 @@ jobs:
 
       # Step 7: Run Makefile commands for tests
       - name: Run Tests
-        run: make test-bats
+        run: | 
+          make test-bats
+          make test-go
