--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,14 @@ jobs:
           sudo apt update
           sudo apt install kurtosis-cli
           kurtosis version
+      
+      # Step 3: Install Go
+      - name: Install Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: 1.21.3
+        env:
+          GOARCH: "amd64"
 
       # Step 4: Spin up Kurtosis Devnet
       - name: Deploy Kurtosis Devnet
