--- a/.github/workflows/ci-matrix.yml
+++ b/.github/workflows/ci-matrix.yml
@@ -74,7 +74,7 @@ jobs:
           
       # Step 7: Install Foundry Toolchain
       - name: Install Foundry
-        if: contains(matrix.config.test_types, 'go')
+        if: contains(matrix.config.test_types, 'bats')
         uses: foundry-rs/foundry-toolchain@v1
         with:
           version: stable
