--- a/.github/workflows/ci-matrix.yml
+++ b/.github/workflows/ci-matrix.yml
@@ -13,10 +13,10 @@ jobs:
         config:
           - network: fork9-legacy-zkevm-stack-rollup.yml
             rpc_service: zkevm-node-rpc-001
-            test_types: [bats]
+            test_types: [bats,go]
           - network: fork11-new-cdk-stack-rollup.yml
             rpc_service: cdk-erigon-rpc-001
-            test_types: [bats]
+            test_types: [bats,go]
 
     steps:
       # Step 1: Checkout the repository
