--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -20,11 +20,13 @@ jobs:
 
           - network: "fork11-rollup"
             bats_tests: "batch-verification.bats,eoa-transaction.bats"
+            go_tests: ""
             deploy_infra: true
             l2_rpc_url: "http://127.0.0.1:62452"
 
           - network: "fork12-cdk-validium"
             bats_tests: "batch-verification.bats,erc20-tests.bats"
+            go_tests: ""
             deploy_infra: true
 
           - network: "fork12-rollup"
@@ -65,6 +67,17 @@ jobs:
     - name: Install foundry
       uses: foundry-rs/foundry-toolchain@v1
 
+    - name: Install Go
+      uses: actions/setup-go@v5
+      with:
+        go-version: 1.21.3
+      env:
+        GOARCH: "amd64"
+        
+    - name: Install godotenv
+      run: |
+        go install github.com/joho/godotenv/cmd/godotenv@latest
+
     - name: Checkout Kurtosis CDK
       uses: actions/checkout@v4
       with:
@@ -86,7 +99,7 @@ jobs:
         L2_RPC_URL: ${{ matrix.l2_rpc_url }}
         KURTOSIS_FOLDER: ${{ github.workspace }}/kurtosis-cdk
         BATS_LIB_PATH: /usr/lib/
-    
+  
     - name: Dump enclave logs
       if: failure()
       run: kurtosis dump ./dump
