--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -67,6 +67,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Install Kurtosis
+      if: matrix.deploy_infra
       run: |
         echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
         sudo apt update
@@ -74,6 +75,7 @@ jobs:
         kurtosis version
 
     - name: Disable kurtosis analytics
+      if: matrix.deploy_infra
       run: kurtosis analytics disable
 
     - name: Install yq
@@ -106,6 +108,7 @@ jobs:
         go install github.com/joho/godotenv/cmd/godotenv@latest
 
     - name: Checkout Kurtosis CDK
+      if: matrix.deploy_infra
       uses: actions/checkout@v4
       with:
         repository: 0xPolygon/kurtosis-cdk
