--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -127,15 +127,16 @@ jobs:
 
     - name: Run E2E Tests
       run: |
-        polygon-test-runner --filter-tags "${{ matrix.filter_tags }}"
+        polygon-test-runner \ 
+          --network: "${{ matrix.network }}" \
+          --bats-tests "${{ matrix.bats_tests }}" \
+          --filter-tags "${{ matrix.filter_tags }}" \
+          --deploy_infra: ${{ matrix.deploy_infra }} \
+          --gas_token_addr: ${{ matrix.gas_token_addr }} \
+          --kurtosis_folder: ${{ github.workspace }}/kurtosis-cdk
       env:
-        NETWORK: ${{ matrix.network }}
-        BATS_TESTS: ${{ matrix.bats_tests }}
-        DEPLOY_INFRA: ${{ matrix.deploy_infra }}
         GAS_TOKEN_ADDR: ${{ matrix.gas_token_addr }}
         L2_RPC_URL: ${{ matrix.l2_rpc_url }}
-        KURTOSIS_FOLDER: ${{ github.workspace }}/kurtosis-cdk
-        BATS_LIB_PATH: /usr/lib/
   
     - name: Dump enclave logs
       if: failure() && matrix.deploy_infra
