--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -120,6 +120,9 @@ jobs:
 
     - name: Install runner
       run: make install-runner
+      
+    - name: Cast Version (debug)
+      run: cast --version
 
     - name: Run E2E Tests
       run: |
